# SMOP

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: main.py
backend/engines/: adversarial_tests.py  compliance_engine.py  container_builder.py  data_validator.py  drift_detector.py  evaluator.py  fairness.py  model_registry.py  model_signer.py  rollback_engine.py  sbom_generator.py  trainer.py
backend/utils/: hash_utils.py  logger.py  pdf_export.py
docs/: API.md  ARCHITECTURE.md  GOVERNANCE.md  RUNBOOK.md
examples/: predict_payload.json  train_payload.json
frontend/: dashboard.js  index.html  styles.css
models/: registry.json
pipelines/: ci_cd_simulated.yml
tests/: conftest.py  test_api.py  test_ci_pipeline.py  test_drift.py  test_policy.py  test_registry.py  test_training.py  test_validator.py
