[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "W",
  "PL",
]
ignore = ["B905", "PLR0913"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project]
name = "secure-mlops"
version = "0.1.0"
description = "Secure MLOps pipeline simulation"
authors = [{ name = "SMOP Team" }]
requires-python = ">=3.11"
